# router/app.go
@@ -3,24 +3,38 @@ package router
 import (
 	"IM/docs"
 	"IM/service"
+
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger" // gin-swagger middleware
 )
-
-
-func Router() *gin.Engine{
+ 
+func Router() *gin.Engine {
 	r := gin.Default()
+	// swagger
 	docs.SwaggerInfo.BasePath = ""
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
-	r.GET("/index", service.GetIndex)
-	r.GET("/user/GetUserList", service.GetUserList)
-	r.POST("/user/CreateUser", service.CreateUser)
-	r.DELETE("/user/DeleteUser", service.DeleteUser)
-	r.POST("/user/UpdateUser", service.UpdateUser)
-	r.POST("/user/FindUserByNameAndPwd", service.FindUserByNameAndPwd)
+	//静态资源
+	r.Static("/asset", "asset/")
+	r.StaticFile("/favicon.ico", "asset/images/favicon.ico")
+	//	r.StaticFS()
+	r.LoadHTMLGlob("views/**/*")
 
-	r.GET("/user/SendMsg", service.SendMsg)
+	//首页
+	r.GET("/", service.GetIndex)
+	r.GET("/index", service.GetIndex)
+	r.GET("/toRegister", service.ToRegister)
+
+	// 用户模块
+	r.POST("/user/getUserList", service.GetUserList)
+	r.POST("/user/createUser", service.CreateUser)
+	r.DELETE("/user/deleteUser", service.DeleteUser)
+	r.POST("/user/updateUser", service.UpdateUser)
+	r.POST("/user/findUserByNameAndPwd", service.FindUserByNameAndPwd)
+
+	// 发送消息
+	r.GET("/user/sendMsg", service.SendMsg)
+	r.GET("/ser/sendUserMsg", service.SendUserMsg)
 	return r
 }
